Added style injection for grunt

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "FrontEndStarter",
   "dependencies": {
   	"grunt": "~0.4.1",
-  	"grunt-contrib": "~0.7.0"
+  	"grunt-contrib": "~0.7.0",
+  	"grunt-style-injector": "~0.1.7"
   }
 }
