--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "FrontEndStarter",
   "dependencies": {
   	"grunt": "~0.4.1",
-  	"grunt-contrib": "~0.7.0",
+  	"grunt-contrib-compass": "~0.5.0",
+  	"grunt-contrib-watch": "~0.5.3",
   	"grunt-style-injector": "~0.1.7"
   }
 }
