--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   	"grunt": "~0.4.1",
   	"grunt-contrib-compass": "~0.5.0",
   	"grunt-contrib-watch": "~0.5.3",
-  	"grunt-style-injector": "~0.1.7"
+  	"grunt-style-injector": "~0.1.7",
+  	"grunt-smushit" : "",
+	"grunt-contrib-concat" : "",
+	"grunt-contrib-uglify" : "",
+	"grunt-contrib-cssmin" : "",
+	"grunt-contrib-copy" : "",
+	"grunt-usemin" : ""
   }
 }
