--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   	"grunt-contrib-watch": "~0.5.3",
   	"grunt-style-injector": "~0.1.7",
   	"grunt-smushit" : "",
-	"grunt-contrib-concat" : "",
-	"grunt-contrib-uglify" : "",
-	"grunt-contrib-cssmin" : "",
-	"grunt-contrib-copy" : "",
-	"grunt-usemin" : ""
+    "grunt-useref": "0.0.16",
+	"grunt-contrib-copy" : ""
   }
 }
