--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "Front-end-Start",
   "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
+    "debug": "~0.8.1",
     "express": "~4.2.0",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-imagemin": "^0.7.1",
     "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.4.17",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
